5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1650_2728.log
== TEST (2019-04-14 19:11:24) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=8*percurso
consumob=12*percurso
if(tipo.upper()==a):
	print(consumoa)
else:
	print(consumob)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(tipo.upper()==a):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:12:11) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=8*percurso
consumob=12*percurso
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- OUTPUT:
780.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:12:17) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=8*percurso
consumob=12*percurso
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- EXECUTION TIME:
0.193257
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
780.0
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
520.0
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
1600.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:12:40) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso12
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    consumob=percurso12
NameError: name 'percurso12' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:12:42) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso12
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- EXECUTION TIME:
0.165286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2728/main.py", line 4, in <module>
    consumob=percurso12
NameError: name 'percurso12' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:12:47) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso12
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    consumob=percurso12
NameError: name 'percurso12' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:12:57) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso/12
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- EXECUTION TIME:
0.213713
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:12:58) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso/12
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- EXECUTION TIME:
0.139483
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:12:58) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso/12
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- EXECUTION TIME:
0.204437
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
25.0
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:

-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:12:59) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso/12
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:13:05) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso/12
if(tipo.upper() == "A" ):
	print(consumoa)
else:
	print(consumob)

-- EXECUTION TIME:
0.163398
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:13:41) 
-- CODE:
percurso=float(input("p"))
tipo=input("t")
consumoa=percurso/8
consumob=percurso/12
if(tipo.upper() == "A" ):
	print(round(consumoa,2))
else:
	print(round(consumob,2))

-- EXECUTION TIME:
0.140642
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
